# prisma-airs-mlops-lab

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  lab.config.json  lab.config.yaml  pyproject.toml
.claude/reference/: airs-provisioning.md  lab-system-architecture.md  model-security-scanning.md  module-refactor-plan.md  workshop-context.md
.github/: BRANCH-STRATEGY.md  pipeline-config.yaml
.github/workflows/: deploy-app.yaml  deploy-docs.yaml  gate-1-train.yaml  gate-2-publish.yaml  gate-3-deploy.yaml
.wrangler/cache/: pages.json  wrangler-account.json
airs/: requirements.txt  scan_model.py
airs/poisoning_demo/: README.md  __init__.py  compare_models.py  create_poisoned_data.py  train_poisoned.py
app/: Dockerfile  main.py  requirements.txt
docs/: how-it-works.md  index.md  modules.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/es/: how-it-works.md  index.md  modules.md
docs/guide/: index.md  student-setup.md
lab/: .progress.json  .progress.json.example  LAB-0.md  LAB-1.md  LAB-2.md  LAB-3.md  LAB-4.md  LAB-5.md  LAB-6.md  LAB-7.md  LAB_GUIDE.md
leaderboard/: app.py  requirements.txt
model-tuning/: README.md  chat.py  explore_dataset.py  merge_adapter.py  publish_model.py  pyproject.toml  requirements.txt  train_advisor.py
model-tuning/data/: nist_sample.json
scripts/: compare_scan_results.py  create_threat_models.py  get-pypi-url.sh  manifest.py  scan_model.py  switch-profile.sh  test_airs_sdk.py  test_container.sh  test_inference.py
(+98 files in other folders)
