[project]
name = "airs-mlops-lab"
version = "0.1.0"
description = "MLOps learning lab with Prisma AIRS Model Security integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "google-auth>=2.0",
    "httpx>=0.27",
    "requests>=2.31",
    "python-dotenv>=1.2.1",
    "rich>=14.0",
    "uvicorn[standard]>=0.34",
]

# Note: AIRS SDK (model-security-client) is NOT included here because it requires
# authenticated private PyPI. CI scanning uses airs/requirements.txt separately.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airs_mlops_lab"]
