[project]
name = "model-tuning"
version = "0.1.0"
description = "Cloud Security Advisor - LLM fine-tuning with NIST data"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "transformers>=4.40",
    "datasets>=2.18",
    "torch>=2.2",
    "accelerate>=0.28",
    
    # LoRA / PEFT fine-tuning
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    
    # Utilities
    "scikit-learn",
    "rich",  # Pretty console output
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_tuning"]

